--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ book:
   author: "Rogério Aparecido Gonçalves"
   date: "09/10/2024"
   search: true
-  repo-url: https://github.com/jjallaire/hopr/
+  repo-url: https://github.com/rogerioag/praticas-tecnologias-blockchain
   repo-actions: [edit]
   downloads: [pdf, epub]
   sharing: [twitter, facebook]
